--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "asar": "^0.11.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "devtron": "^1.2.1",
     "electron-mocha": "^2.0.0",
     "electron-prebuilt": "^1.0.1",
@@ -13,6 +14,7 @@
     "gulp-watch": "^4.3.5",
     "q": "^1.4.1",
     "rollup": "^0.26.3",
+    "spectron": "^3.2.6",
     "yargs": "^4.2.0"
   },
   "optionalDependencies": {
@@ -25,7 +27,7 @@
     "release": "gulp release --env=production",
     "start": "gulp start",
     "pretest": "gulp build --env=test",
-    "test": "electron-mocha build --renderer",
+    "test": "bin/test.sh",
     "install-native": "node ./tasks/install_native_module",
     "clear": "rm -rf '/Users/chrisenytc/Library/Application Support/UbAuth Dev' && rm -rf '/Users/chrisenytc/Library/Application Support/UbAuth'"
   }
