--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "devtron": "^1.2.1",
     "electron-mocha": "^2.0.0",
     "electron-prebuilt": "^1.0.1",
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.11.1",
     "fs-jetpack": "^0.9.0",
     "gulp": "^3.9.0",
     "gulp-batch": "^1.0.5",
@@ -22,7 +25,7 @@
     "rcedit": "^0.5.0"
   },
   "scripts": {
-    "postinstall": "cd app && npm install",
+    "postinstall": "bundle install && overcommit --install && cd app && npm install",
     "build": "gulp build",
     "release": "gulp release --env=production",
     "start": "gulp start",
