--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 os:
-- linux
-- osx
+  - linux
+  - osx
 language: node_js
 node_js:
-- 6.3.1
+  - 6.3.1
+ruby:
+  - 2.3.1
 cache:
   directories:
   - node_modules
@@ -16,10 +18,10 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
-
+before_install:
+  - gem install bundler
 before_deploy:
   - bin/deploy.sh
-
 deploy:
   provider: releases
   api_key:
