--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ os:
 language: node_js
 node_js:
   - 6.3.1
-ruby:
-  - 2.3.1
 cache:
   directories:
   - node_modules
@@ -18,8 +16,8 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
-before_install:
-  - gem install bundler
+install:
+  - bin/install.sh
 before_deploy:
   - bin/deploy.sh
 deploy:
