--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - script/install.sh
 before_deploy:
   - script/deploy.sh
-  - "Package file: ${RELEASED_PACKAGE_FILENAME}"
+  - "echo \"Package file: ${RELEASED_PACKAGE_FILENAME}\""
 deploy:
   provider: releases
   api_key:
@@ -26,4 +26,4 @@ deploy:
   on:
     tags: true
 after_deploy:
-  - "Version ${APP_VERSION} deployed successfully. \O/"
+  - "echo \"Version ${APP_VERSION} deployed successfully. \O/\""
