Update sample release-message

--- a/release-message.md.sample
+++ b/release-message.md.sample
@@ -3,12 +3,17 @@ Notable Changes
 
 * Initial release
 
-Fixes
-=====
+New Features
+===============
 
 * None
 
-New Features
-===============
+Fixes
+======
+
+* None
+
+Deprecated
+============
 
 * None
