--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 os:
   - osx
-language:
-  - objective-c
+sudo: false
+go:
+ - 1.3.1
 osx_image: xcode7.3
 env:
   - NODE_VERSION="6.3.0"
@@ -9,11 +10,9 @@ cache:
   directories:
   - node_modules
   - app/node_modules
-before_install:
-  - brew update
-  - brew outdated jq || brew upgrade jq
 install:
   - script/install.sh
+script: script/test.sh
 before_deploy:
   - script/deploy.sh
   - "echo \"Package file: ${RELEASED_PACKAGE_FILENAME}\""
