Update overcommit configs

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -28,6 +28,8 @@ PreCommit:
       enabled: true
   JsonSyntaxSyntax:
     enabled: true
+  YamlSyntax:
+    enabled: true
   TravisLint:
       enabled: true
   EsLint:
