--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 before_deploy:
   - script/keychain.sh
   - script/deploy.sh
-  - echo Package file -> ${RELEASED_PACKAGE_FILENAME}
+  - echo Package file ${RELEASED_PACKAGE_FILENAME}
 deploy:
   provider: releases
   api_key:
