--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "asar": "^0.11.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "codeclimate-test-reporter": "^0.3.3",
     "devtron": "^1.2.1",
     "electron-mocha": "^2.0.0",
     "electron-prebuilt": "^1.0.1",
@@ -14,6 +15,7 @@
     "gulp-batch": "^1.0.5",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
+    "istanbul": "^0.4.4",
     "q": "^1.4.1",
     "rollup": "^0.26.3",
     "spectron": "^3.2.6",
